--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -1,42 +1,188 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Studio Integral</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+<main>
+  <section id="banner">
+    <div id="carouselExampleIndicators" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../assets/banner1.png" class="d-block w-100 banner" alt="...">
+          <div class="carousel-caption d-block h-75">
+            <h1 class="fonte-destaque display-5">Studio Integral</h1>
+            <p class="texto-destaque">Escola Internacional de Yoga e Meditação</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../assets/22.png" class="d-block w-100 imagem-carrosel1" alt="...">
+          <div class="carousel-caption d-block h-75">
+            <h1 class="fonte-destaque display-5">Formação Yoga</h1>
+            <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
+            <button class="btn btn-primary btn-carrosel">Saiba Mais</button>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../assets/banner2.png" class="d-block w-100 imagem-carrosel" alt="...">
+          <div class="carousel-caption d-block h-75">
+            <h1 class="fonte-destaque display-4">Retiro Yoga Brasilia</h1>
+            <p class="texto-destaque">Uma experiência única em meio a natureza, para recarregar e harmonizar as
+              energias.</p>
+            <button class="btn btn-primary btn-carrosel">Saiba Mais</button>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Pricing</a>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </section>
+  <section id="quem_somos ">
+    <div class="p-3 mt-3 d-flex flex-column justify-content-center align-items-center">
+      <h1 class="text-center">Quem somos?</h1>
+      <div class="text-limit">
+        <p class="text-center">Studio Integral é um espaço que nasceu com o objetivo de ser um refúgio para
+          aqueles que buscam saúde, auto conhecimento e espiritualidade. Somos uma Escola Internacional de Yoga Integral
+          na linhagem tântrica e a nossa missão é oferecer um trabalho personalizado e profissional, dentro dos valores
+          da meditação e os ensinamentos tradicionais da Sagrada Índia.
+        </p>
+      </div>
+    </div>
+  </section>
+  <section id="servicos" class="mt-5">
+    <div class="container-fluid">
+      <h1 class="text-center">Nossos Serviços</h1>
+      <div class="row justify-content-center">
+
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/card-1.png" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Aulas Presenciais</h3>
+            <p class="card-text text-center my-3">Aulas presenciais com total atenção de nossos professores com
+              correções e ajustes, Studio localizado ao lado do Parque Aclimação.
+            </p>
+            <a class="btn btn-primary btn-card ms-4" href="/main/aulas-presencial">Saiba Mais</a>
+          </div>
+        </div>
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/card-2.jpg" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Aulas Online</h3>
+            <p class="card-text text-center my-3">Aulas Online ao vivo e diversas aulas gravadas. Treine onde e quando
+              quiser com horarios para encaixar em qualquer tipo de rotina.
+            </p>
+            <a class="btn btn-primary btn-card ms-4" href="/main/aulas-online">Saiba Mais</a>
+          </div>
+        </div>
+
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/card-3.jpg" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Curso de Meditação</h3>
+            <p class="card-text text-center">Neste curso você irá aprender os princípios básicos para se obter
+              sucesso
+              na prática de meditação, seja você um iniciante ou alguém que já medita há algum tempo e busca dar um
+              “up” na sua prática.</p>
+            <a class="btn btn-primary btn-card ms-4">Saiba Mais</a>
+          </div>
+        </div>
+
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/22.png" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Formação Internacional Yoga</h3>
+            <p class="card-text text-center">Este programa foi desenvolvido de forma a promover a filosofia prática
+              e
+              os valores fundamentais dos métodos tradicionais do Yoga (Raja Yoga, Bhakti Yoga, Jñana Yoga, Karma
+              Yoga
+              e Tantra Yoga).</p>
+            <a class="btn btn-primary btn-card ms-4" href="/main/formacao">Saiba Mais</a>
+          </div>
+        </div>
+
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/retiro13.jpeg" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Retiro Cura e Chakras</h3>
+            <p class="card-text text-center">O retiro Cura e Chakras é uma experiência intensa de autoconhecimento,
+              que tem como base a prática dos ensinamentos do Kalaripayattu (conhecida como o Yoga dos guerreiros do
+              sul da Índia) e as meditações do Sri Vidya Tantra.</p>
+            <a class="btn btn-primary btn-card ms-4" href="/main/retiro">Saiba Mais</a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </section>
+  <section id="metodo">
+    <div class="p-3 mt-3">
+      <div class="row">
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+          <h1 class="text-center">O método iTantra</h1>
+          <p class="text-center">O Studio Integral oferece um método que unifica as práticas tradicionais, o Yoga
+            moderno e
+            o Kalaripayattu (arte marcial ancestral ensinada nas escolas tântricas do sul da Índia). Com a unificação
+            dessas
+            práticas, surgiu nossa metodologia de ensino: o método iTantra. Uma metodologia inclusiva que facilita o
+            desenvolvimento do aluno, independentemente da sua experiência dentro do universo do Yoga e da Meditação.
+          </p>
+        </div>
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+          <img src="../assets/metodo.jpeg" alt="" class="imagem imagem-metodo">
         </div>
       </div>
     </div>
-  </nav>
-</header>
-
-<section id="banner">
-  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="5000">
-        <img src="/assets/banner1.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="/assets/banner2.jpeg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/assets/banner3.jpg" class="d-block w-100" alt="...">
+  </section>
+  <section id="objetivo">
+    <div class="p-3 mt-3 mx-5-lg">
+      <div class="row">
+        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
+          <h1 class="text-center">Nosso Objetivo</h1>
+          <div class=" text-limit">
+            <p class="text-center">Nosso objetivo é proporcionar a transformação das pessoas que passarem pela escola,
+              para que elas purifiquem o seu entorno social, cumprindo a missão de formar uma comunidade que busque
+              viver
+              em uma sociedade mais próspera e saudável.
+            </p>
+            <p class="text-center">Ajudar o praticante a realizar um estado de consciência na
+              meditação.
+            </p>
+            <p class="text-center">
+              Despertar a Kundalini que é a energia espiritual, por meio da transformação mental, física e espiritual do
+              indivíduo.
+            </p>
+            <p class="text-center">Despertar para uma essência individual e coletiva através do autoconhecimento.</p>
+            <p class="text-center">
+              Treinar pessoas que buscam se profissionalizar utilizando o método como uma forma de trabalho. Com
+              certificação.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
-</section>
+  </section>
+  <section id="walnunes">
+    <div class="mt-3">
+      <div class="row ">
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+          <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
+          <p class="text-center">Wal Nunes – Mestre em Yoga e Meditação há mais de 10 anos. Praticante há mais de 20
+            anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
+            treino
+            iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
+          </p>
+        </div>
+        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+          <img class="imagem" style="width: auto; height: 300px;" src="../assets/walnunes.png">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12 d-flex justify-content-center">
+          <button class="btn btn-primary btn-card mt-4">Saiba mais sobre Wal Nunes</button>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
