--- a/studio-integral/src/styles.scss
+++ b/studio-integral/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+h1,h2,h3,h4,h5{
+  font-family: 'Open Sans', sans-serif;
+  color: #98408e;
+  font-weight: Bold;
+}
+
+p{
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 500;
+  font-size: 1.2rem;
+}
