--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -8,11 +8,12 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-        <div class="navbar-nav align-items-center">
-          <a class="nav-link mx-3 active" aria-current="page" [routerLink]="['/main/formacao']">Formação</a>
+        <div class="navbar-nav align-items-center justify-content-center">
+          <a class="nav-link mx-3 active" aria-current="page" [routerLink]="['/main/home']">Home</a>
+          <a class="nav-link mx-3" aria-current="page" [routerLink]="['/main/formacao']">Formação</a>
           <a class="nav-link mx-3" [routerLink]="['/main/retiro']">Retiro</a>
-          <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Aulas Presencial</a>
-          <a class="nav-link mx-3" [routerLink]="['/main/aulas-online']">Aulas Online</a>
+          <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Presencial</a>
+          <a class="nav-link mx-3" [routerLink]="['/main/aulas-online']">App Online</a>
           <a class="nav-link mx-3" [routerLink]="['/main/mestres-da-linhagem']">Mestres</a>
           <a class="nav-link mx-3" [routerLink]="['/main/codigo-de-etica']">Código de Ética</a>
           <a class="nav-link mx-3" [routerLink]="['/main/planos-e-precos']">Planos e Preço</a>
