--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -3,14 +3,15 @@
     <div id="carouselExampleIndicators" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../assets/banner1.png" class="d-block w-100 banner" alt="...">
+          <img src="../assets/banner1.png" class="d-none d-sm-block w-100 banner" alt="...">
+          <img src="../assets/banner1mobile.png" class="d-block d-sm-none w-100 banner" alt="...">
           <div class="carousel-caption d-block h-75">
-            <h1 class="fonte-destaque display-5">Studio Integral</h1>
-            <p class="texto-destaque">Escola Internacional de Yoga e Meditação</p>
+            <h1> <span class="titulo-destaque-main display-5">Studio Integral</span> </h1>
+            <p> <span class="texto-destaque-main ">O melhor de você está aqui</span> </p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/22.png" class="d-block w-100 imagem-carrosel1" alt="...">
+          <img src="../assets/banner2.png" loading="lazy" class="d-block w-100 imagem-carrosel1" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-5">Formação Yoga</h1>
             <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
@@ -18,7 +19,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="../assets/banner2.png" class="d-block w-100 imagem-carrosel" alt="...">
+          <img src="../assets/banner3.png" loading="lazy" class="d-block w-100 imagem-carrosel" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-4">Retiro Yoga Brasilia</h1>
             <p class="texto-destaque">Uma experiência única em meio a natureza, para recarregar e harmonizar as
@@ -57,7 +58,7 @@
       <div class="row justify-content-center">
 
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card-1.png" class="card-img-top card-posicao-imagem" alt="...">
+          <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h3 class="card-title text-center">Aulas Presenciais</h3>
             <p class="card-text text-center my-3">Aulas presenciais com total atenção de nossos professores com
@@ -67,7 +68,7 @@
           </div>
         </div>
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card-2.jpg" class="card-img-top card-posicao-imagem" alt="...">
+          <img src="../assets/card2.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h3 class="card-title text-center">Aulas Online</h3>
             <p class="card-text text-center my-3">Aulas Online ao vivo e diversas aulas gravadas. Treine onde e quando
@@ -78,7 +79,7 @@
         </div>
 
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/card-3.jpg" class="card-img-top card-posicao-imagem" alt="...">
+          <img src="../assets/card-3.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h3 class="card-title text-center">Curso de Meditação</h3>
             <p class="card-text text-center">Neste curso você irá aprender os princípios básicos para se obter
@@ -90,7 +91,7 @@
         </div>
 
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/22.png" class="card-img-top card-posicao-imagem" alt="...">
+          <img src="../assets/banner2.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h3 class="card-title text-center">Formação Internacional Yoga</h3>
             <p class="card-text text-center">Este programa foi desenvolvido de forma a promover a filosofia prática
@@ -103,7 +104,7 @@
         </div>
 
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
-          <img src="../assets/retiro13.jpeg" class="card-img-top card-posicao-imagem" alt="...">
+          <img src="../assets/retiro13.jpeg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
             <h3 class="card-title text-center">Retiro Cura e Chakras</h3>
             <p class="card-text text-center">O retiro Cura e Chakras é uma experiência intensa de autoconhecimento,
@@ -123,14 +124,15 @@
           <h1 class="text-center">O método iTantra</h1>
           <p class="text-center">O Studio Integral oferece um método que unifica as práticas tradicionais, o Yoga
             moderno e
-            o Kalaripayattu (arte marcial ancestral ensinada nas escolas tântricas do sul da Índia). Com a unificação
+            o Kalaripayattu Kerala (arte marcial ancestral ensinada nas escolas tântricas do sul da Índia). Com a
+            unificação
             dessas
             práticas, surgiu nossa metodologia de ensino: o método iTantra. Uma metodologia inclusiva que facilita o
             desenvolvimento do aluno, independentemente da sua experiência dentro do universo do Yoga e da Meditação.
           </p>
         </div>
         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
-          <img src="../assets/metodo.jpeg" alt="" class="imagem imagem-metodo">
+          <img src="../assets/metodo.jpg" loading="lazy" alt="" class="imagem imagem-metodo">
         </div>
       </div>
     </div>
@@ -141,22 +143,15 @@
         <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <h1 class="text-center">Nosso Objetivo</h1>
           <div class=" text-limit">
-            <p class="text-center">Nosso objetivo é proporcionar a transformação das pessoas que passarem pela escola,
-              para que elas purifiquem o seu entorno social, cumprindo a missão de formar uma comunidade que busque
-              viver
-              em uma sociedade mais próspera e saudável.
+            <p class="text-center">Ajudar o praticante a realizar um estado de consciência da meditação, se conhecendo
+              através do Ser Divino que há em todos seres.
             </p>
-            <p class="text-center">Ajudar o praticante a realizar um estado de consciência na
-              meditação.
-            </p>
-            <p class="text-center">
-              Despertar a Kundalini que é a energia espiritual, por meio da transformação mental, física e espiritual do
-              indivíduo.
+            <p class="text-center">Despertar a Kundalini que é a energia espiritual, por meio da transformação mental,
+              física e espiritual do indivíduo.
             </p>
             <p class="text-center">Despertar para uma essência individual e coletiva através do autoconhecimento.</p>
-            <p class="text-center">
-              Treinar pessoas que buscam se profissionalizar utilizando o método como uma forma de trabalho. Com
-              certificação.
+            <p class="text-center">Treinar e capacitar pessoas que buscam se profissionalizar utilizando o método como
+              uma forma de trabalho e com certificação internacional renomada.
             </p>
           </div>
         </div>
@@ -165,8 +160,8 @@
   </section>
   <section id="walnunes">
     <div class="mt-3">
-      <div class="row ">
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
+      <div class="row d-flex justify-content-center">
+        <div class="col-12  d-flex flex-column justify-content-center align-items-center text-limit">
           <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
           <p class="text-center">Wal Nunes – Mestre em Yoga e Meditação há mais de 10 anos. Praticante há mais de 20
             anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
@@ -174,8 +169,8 @@
             iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
           </p>
         </div>
-        <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-items-center">
-          <img class="imagem" style="width: auto; height: 300px;" src="../assets/walnunes.png">
+        <div class="col-12  d-flex flex-column justify-content-center align-items-center">
+          <img class="imagem" loading="lazy" style="width: auto; height: 300px;" src="../assets/walnunes.png">
         </div>
       </div>
       <div class="row">
