--- a/studio-integral/src/app/main/home/home.component.scss
+++ b/studio-integral/src/app/main/home/home.component.scss
@@ -1,13 +1,29 @@
 
 .banner{
   object-fit: cover;
-  object-position: 20% 40%;
-  height: 450px;
+  object-position: 20% 20%;
+  height: 500px;
 }
 
-.carrosel-destaque{
-  width: 100vw;
+.titulo-destaque-main{
+  color: #fff;
+  /* -webkit-text-stroke: 0.5px black; */
+  /* background-color: #4d297174; */
+  font-weight: bold;
+  font-size: 4rem;
+  font-weight: 700;
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.505);
 }
+
+.texto-destaque-main{
+  color: #fff;
+  /* -webkit-text-stroke: 0.5px black; */
+  /* background-color: #4d297174; */
+  font-weight: 600;
+  font-size: 2rem;
+  text-shadow: 0 0 8px rgba(0, 0, 0, 0.505);
+}
+
 
 .img-banner{
   object-fit: cover;
@@ -15,6 +31,7 @@
   max-height: 600px;
   width: 100%;
 }
+
 
 .img-destaque{
   object-fit: cover;
@@ -32,27 +49,27 @@
 .fonte-destaque{
   color: #fff;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 2.5rem;
   text-shadow: 0 0 5px #000;
 }
 
 .texto-destaque{
   color: #fff;
   font-weight: 400;
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   text-shadow: 0 0 3px #000;
 }
 
 .imagem-carrosel {
   object-fit: cover;
   object-position: 70% 80%;
-  height: 450px;
+  height: 500px;
 }
 
 .imagem-carrosel1 {
   object-fit: cover;
-  object-position: 70% 40%;
-  height: 450px;
+  object-position: 80%;
+  height: 500px;
 }
 
 .btn-carrosel{
@@ -89,8 +106,8 @@ border-top-right-radius: 30px;
 }
 
 .imagem-metodo{
-  width: auto;
-  height: 350px;
+  width: 100%;
+  height: auto;
 }
 
 #walnunes{
@@ -102,10 +119,9 @@ border-top-right-radius: 30px;
 
     .banner{
       object-fit: cover;
-      object-position: 52%;
+      object-position: 40%;
       height: 450px;
     }
-
     .imagem-metodo{
       width: 90vw;
       height: auto;
