--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <main>
   <section id="banner">
     <div id="carouselExampleIndicators" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
@@ -57,6 +58,21 @@
       <h1 class="text-center">Nossos Serviços</h1>
       <div class="row justify-content-center">
 
+        <div class="card  card-largura col-12 col-md-6 col-lg-6 m-5 p-0" style='position:relative; top:0px; left:0px;'>
+          <img src="../assets/card4.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="selo-gratuito" style='position:absolute; top:15px; left:15px;'>Gratuito</div>
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Meditação Lua Cheia</h3>
+            <p class="card-text text-center">A meditação da Lua Cheia é uma prática das escolas tradicionais que
+              cultuam a energia de Shakti, e um evento online gratuito que acontece toda lua cheia através do nosso
+              aplicativo online iTantra Club.</p>
+            <a class="btn btn-primary btn-card ms-4"
+              href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20da%20Medita%C3%A7%C3%A3o%20de%20Lua%20Cheia!"
+              target="_blank">Quero
+              Participar</a>
+          </div>
+        </div>
+
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
           <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -113,6 +129,7 @@
             <a class="btn btn-primary btn-card ms-4" href="/main/retiro">Saiba Mais</a>
           </div>
         </div>
+
 
       </div>
     </div>
