--- a/studio-integral/src/app/main/formacao/formacao.component.html
+++ b/studio-integral/src/app/main/formacao/formacao.component.html
@@ -29,14 +29,16 @@
               aspectos da experiência humana a partir de um mergulho no conhecimento eterno, atemporal, da milenar
               cultura indiana.
               <br>
-              Muito além dos aspectos físicos, a prática do Yoga é um percurso dos níveis mais grosseiros aos mais sutis
-              do Corpo, da Vida e da Mente rumo ao Si mesmo, ao Self, ao Eu, ao Atma, ao centro infinito de Consciência,
-              Verdade e Bem Aventurança que, segundo a ciência védica, é a essência e a Unidade de todas as experiências
-              e manifestações no Universo e de cada ser Humano.
+              Nesta jornada de 9 meses, através das diferentes técnicas, ferramentas, métodos e dos principais textos
+              sagrados do Yoga, o aluno construirá uma base consistente para sua prática e desenvolvimento pessoal e
+              para a atuação como professor.
+              O Curso foi pensado para quem deseja vivenciar esse estilo de vida, quem deseja se profissionalizar ou se
+              especializar nessa área. Nossa formação oferece o certificado internacional do Yoga Alliance, certificado
+              que autoriza o exercício profissional em todo o mundo.
             </p>
           </div>
-          <div class="col-12 mb-5">
-            <iframe width="100%" height="331" src="https://www.youtube.com/embed/IU_A0A17Os4"
+          <div class="col-12 mb-5 d-flex justify-content-center">
+            <iframe width="700" height="331" src="https://www.youtube.com/embed/IU_A0A17Os4"
               title="Depoimento Cura e Chakras" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
@@ -60,10 +62,10 @@
     </div>
   </div>
   <div class="grade">
-    <div class="row grade d-flex justify-content-center">
+    <div class="row d-flex justify-content-center">
       <h1 class=" title-bonus text-center my-3 pb-5">O que você vai aprender na Formação:</h1>
-      <div class="row mb-4">
-        <div class="col-12 col-md-6 d-flex flex-column align-items-center">
+      <div class="row d-flex justify-content-center mb-4">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
           <h6 class="subtitle-grade ">90 Horas Técnicas, treino e Práticas</h6>
           <ul class="lista-grade">
             <li>Pranayama</li>
@@ -76,7 +78,7 @@
             <li>Meditação</li>
           </ul>
         </div>
-        <div class="col-12 col-md-6 d-flex flex-column align-items-center">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
           <h6 class="subtitle-grade">30 Horas Yoga e Ciências Humanas</h6>
           <ul class="lista-grade">
             <li>História</li>
@@ -90,8 +92,8 @@
           </ul>
         </div>
       </div>
-      <div class="row">
-        <div class="col-12 col-md-6 d-flex flex-column align-items-center">
+      <div class="row d-flex justify-content-center">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
           <h6 class="subtitle-grade">30 Horas Anatomia e Fisiologia</h6>
           <ul class="lista-grade">
             <li>Estudos dos Asanas , alinhamento de acordo com a visão da escola iyengar yoga.</li>
@@ -101,7 +103,7 @@
               Cardiovascular, Sistema Nervoso, Sistema Endócrino e Sistema Digestivo</li>
           </ul>
         </div>
-        <div class="col-12 col-md-6 d-flex flex-column align-items-center">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-center">
           <h6 class="subtitle-grade">50 Horas Atributos Profissionais</h6>
           <ul class="lista-grade">
             <li>Metodologia de Ensino</li>
@@ -113,9 +115,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-12 d-flex flex-column justify-content-center align-items-center my-5">
-        <h5 class="subtitle-grade text-center">9 módulos do Curso Conteúdo online e presenciais, ao longo de toda a
-          formação</h5>
+      <div class="col-12 d-flex flex-column justify-content-center align-items-center my-3">
         <h5 class="subtitle-grade text-center">Material didático e certificação internacional pela Yoga Alliance USA
         </h5>
         <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
@@ -235,6 +235,7 @@
         </div>
       </div>
     </div>
+
   </div>
   <div class="container-fluid">
     <div id="programacao">
@@ -242,7 +243,6 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center">
           <ul class="lista-programacao">
-            <li>27 e 28 - Agosto</li>
             <li>24 e 25 - Setembro</li>
             <li>12 e 15 - Outubro - Retiro Cura e Chakras</li>
             <li>19 e 20 - Novembro</li>
@@ -251,6 +251,7 @@
             <li>25 e 26 - Fevereiro</li>
             <li>25 e 26 - Março</li>
             <li>29 e 30 - Abril</li>
+            <li>27 e 28 - Abril</li>
           </ul>
         </div>
         <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center text-programacao">
@@ -265,6 +266,60 @@
         <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
       </div>
     </div>
+    <div class="d-flex flex-column align-items-center">
+      <h1 class="title-fotos text-center my-3">Fotos de quem ja participou</h1>
+      <div id="carouselExampleIndicators2" class="carousel slide mb-5 carrosel-fotos" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0"
+            class="indicador-carrossel active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="4" aria-label="Slide 5"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="5" aria-label="Slide 6"></button>
+          <button type="button" class="indicador-carrossel" data-bs-target="#carouselExampleIndicators2"
+            data-bs-slide-to="6" aria-label="Slide 7"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../assets/formacao-yoga1.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="../assets/formacao-yoga2.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/formacao-yoga3.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/formacao-yoga4.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/formacao-yoga5.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/formacao-yoga6.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+          <div class="carousel-item ">
+            <img src="../assets/formacao-yoga7.jpg" class="d-block imagem-carrosel" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2"
+          data-bs-slide="prev">
+          <span class="bx bx-chevron-left icon-carrosel" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2"
+          data-bs-slide="next">
+          <span class="bx bx-chevron-right icon-carrosel" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
   </div>
   <div class="row bonus">
     <div class="d-flex flex-column justify-content-center align-items-center">
@@ -273,24 +328,25 @@
       <ul class="lista-bonus">
         <li>
           <i class="bx bxs-gift"></i> Acesso ilimitado por 9 meses as aulas ao vivo on-line com Wal
-          Nunes.
+          Nunes. Valor: <strong>R$ 1.188,00</strong>
         </li>
         <li>
-          <i class="bx bxs-gift"></i> Apostila impressa.
+          <i class="bx bxs-gift"></i> Apostila impressa. Valor: <strong>R$ 450,00</strong>
         </li>
         <li>
-          <i class="bx bxs-gift"></i> Mentoria Meditação com Wal Nunes.
+          <i class="bx bxs-gift"></i> Mentoria Meditação com Wal Nunes. Valor: <strong>R$ 3.150,00</strong>
         </li>
         <li>
           <i class="bx bxs-gift"></i> Mentoria de como aplicar a metodologia de ensino método
-          iTantra.
+          iTantra. Valor: <strong>R$ 2.500,00</strong>
         </li>
         <li>
           <i class="bx bxs-gift"></i> Conhecimento básico Kalaripayattu ( yoga dos guerreiros do sul
-          da Índia).
+          da Índia). Valor: <strong>R$ 250,00</strong>
         </li>
         <li>
-          <i class="bx bxs-gift"></i> Iniciação as meditações Tantricas (Sadhana pessoal).
+          <i class="bx bxs-gift"></i> Iniciação as meditações Tantricas (Sadhana pessoal). Valor: <strong>R$
+            997,00</strong>
         </li>
         <li>
           <i class="bx bxs-gift"></i> Acesso ao grupo WhatsApp exclusivo ao grupo de Formação (Tirar
@@ -304,12 +360,14 @@
           <i class="bx bxs-gift"></i> Orientação de como desenvolver Sadhana pessoal.
         </li>
       </ul>
+      <p class="text-center my-4" style="font-size: 1.3rem;">Mais de <strong>R$ 8.000</strong> somente em bônus!</p>
+      <a class="btn btn-primary btn-card my-3" href="/main/formacao#compra">Quero participar da formação!</a>
     </div>
   </div>
   <div class="walnunes">
     <div class="my-4 d-flex flex-column justify-content-center">
       <div class="row d-flex justify-content-center">
-        <div class="col-12 col-md-7 d-flex flex-column justify-content-center align-items-center">
+        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
           <p class="text-center text-limit">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. Praticante há
             mais de 20
@@ -318,14 +376,16 @@
             iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
           </p>
         </div>
-        <div class="col-12 col-md-3 d-flex flex-column justify-content-center align-items-center">
-          <img class="imagem-wal" style="width: auto; height: 300px;" src="../assets/walnunes.png">
+        <div class="col-12 mb-5 d-flex justify-content-center">
+          <iframe width="700" height="331" src="https://www.youtube.com/embed/_O-jph6Re1s"
+            title="Depoimento Cura e Chakras" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
       <div class="row">
         <div class="col-12 d-flex justify-content-center">
-          <a class="btn btn-primary btn-card mt-4" href="https://youtu.be/_O-jph6Re1s" target="_blank">Saiba mais
-            sobre Wal Nunes</a>
+          <a class="btn btn-primary btn-card my-3" href="/main/formacao#compra">Quero participar da formação!</a>
         </div>
       </div>
     </div>
@@ -382,13 +442,13 @@
       </div>
     </div>
   </div>
-  <div id="compra" class="preco">
-    <div class="row" id="compra">
+  <div id="compra" class="preco ">
+    <div class="row container-fluid" id="compra">
       <div class="col-12 d-flex flex-column align-items-center justify-content-center p-3 mx-0 my-2">
         <h1 class="title-compra text-center">Valor da Capacitação + Retiro Cura e Chakras</h1>
         <h1 class="valor-compra">12x de R$ 918,00</h1>
-        <button class="btn btn-primary btn-cta-compra my-4" href="https://api.whatsapp.com/send?phone=5511982791420"
-          target="_blank">Reservar minha vaga!</button>
+        <a class="btn btn-primary btn-cta-compra my-4" href="https://api.whatsapp.com/send?phone=5511982791420"
+          target="_blank">Reservar minha vaga!</a>
         <h5 class="valor-compra text-center">Entre em contato e veja opções de parcelamento</h5>
       </div>
     </div>
