--- a/studio-integral/src/app/main/formacao/formacao.component.scss
+++ b/studio-integral/src/app/main/formacao/formacao.component.scss
@@ -7,6 +7,10 @@
   position: relative;
 }
 
+.carrosel-fotos{
+ width: 80%;
+}
+
 .title-main{
   width: 500px;
   position: absolute;
@@ -152,7 +156,7 @@
 .grade{
   padding: 10px;
   margin: 0;
-  background-color: #ebb9af;
+  background-color: #EAC8828F;
 }
 
 .carousel{
