--- a/studio-integral/src/app/main/retiro/retiro.component.html
+++ b/studio-integral/src/app/main/retiro/retiro.component.html
@@ -12,7 +12,7 @@
       </div>
     </div>
     <div class="text-banner">
-      <h1 class="fonte-destaque-banner text-center">Retiro Yoga Brasilia</h1>
+      <h1 class="fonte-destaque-banner text-center">Retiro Yoga Cura e Chakras</h1>
       <p class="texto-destaque-banner text-center">Uma experiência única em meio a natureza, para recarregar e
         harmonizar as
         energias.</p>
@@ -44,13 +44,11 @@
           </div>
           <div class="col-12  d-flex flex-column align-items-center">
             <p class="text-center mb-5 text-limit">
-              O retiro vem da minha própria experiência de transformação dentro do universo do yoga e kalaripayattu .
-              Nasceu em 2015 enquanto morava com meu mestre em Auroville, tive a oportunidade de apresentar as técnicas
-              na minha escola da Índia e aprimorar o conhecimento com meus alunos de São Paulo, que desde 2016
-              participam da imersão.
-              <br>
-              É a primeira vez que o retiro Cura e Chakras estará em Brasília, e será ministrado num espaço cheio de
-              verde e natureza.
+              O Cura e Chakras foi desenvolvido pela mestre Wal Nunes a partir de anos de estudos sobre Yoga,
+              autoconhecimento e padrões das doenças mais comuns entre seus alunos. Em sua observação, ela descobriu que
+              alguns padrões de pensamento e atitudes cotidianas revertem-se em quadros de estresse, ansiedade,
+              insegurança e baixa autoestima, que por sua vez se transforma em doenças como depressão, diabetes,
+              obesidade, hipertensão, entre outras.
               <br>
               O retiro atende pessoas de todos os níveis, desde de pessoas que nunca praticaram yoga e meditação a
               alunos avançados.
@@ -67,7 +65,7 @@
   </div>
 
   <div class="row fotos">
-    <h1 class="title-fotos text-center my-3">Chácara Recanto das Palmeiras</h1>
+    <h1 class="title-fotos text-center my-3">Fotos do Local</h1>
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
