--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -22,7 +22,7 @@
         <div class="carousel-item">
           <img src="../assets/banner3.png" loading="lazy" class="d-block w-100 imagem-carrosel" alt="...">
           <div class="carousel-caption d-block h-75">
-            <h1 class="fonte-destaque display-4">Retiro Yoga Brasilia</h1>
+            <h1 class="fonte-destaque display-4">Retiro Cura e Chakras</h1>
             <p class="texto-destaque">Uma experiência única em meio a natureza, para recarregar e harmonizar as
               energias.</p>
             <button class="btn btn-primary btn-carrosel">Saiba Mais</button>
@@ -66,10 +66,7 @@
             <p class="card-text text-center">A meditação da Lua Cheia é uma prática das escolas tradicionais que
               cultuam a energia de Shakti, e um evento online gratuito que acontece toda lua cheia através do nosso
               aplicativo online iTantra Club.</p>
-            <a class="btn btn-primary btn-card ms-4"
-              href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20da%20Medita%C3%A7%C3%A3o%20de%20Lua%20Cheia!"
-              target="_blank">Quero
-              Participar</a>
+            <a class="btn btn-primary btn-card ms-4" href="/main/meditacao-lua-cheia">Saiba Mais</a>
           </div>
         </div>
 
@@ -178,21 +175,20 @@
   <section id="walnunes">
     <div class="mt-3">
       <div class="row d-flex justify-content-center">
-        <div class="col-12  d-flex flex-column justify-content-center align-items-center text-limit">
+        <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
-          <p class="text-center">Wal Nunes – Mestre em Yoga e Meditação há mais de 10 anos. Praticante há mais de 20
+          <p class="text-center text-limit">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. Praticante há
+            mais de 20
             anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
             treino
             iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
           </p>
         </div>
-        <div class="col-12  d-flex flex-column justify-content-center align-items-center">
-          <img class="imagem" loading="lazy" style="width: auto; height: 300px;" src="../assets/walnunes.png">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12 d-flex justify-content-center">
-          <button class="btn btn-primary btn-card mt-4">Saiba mais sobre Wal Nunes</button>
+        <div class="col-12 mb-5 d-flex justify-content-center">
+          <iframe width="700" height="331" src="https://www.youtube.com/embed/_O-jph6Re1s"
+            title="Depoimento Cura e Chakras" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </div>
     </div>
