--- a/studio-integral/src/app/app.component.html
+++ b/studio-integral/src/app/app.component.html
@@ -15,7 +15,7 @@
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-presencial']">Presencial</a>
           <a class="nav-link mx-3" [routerLink]="['/main/aulas-online']">App Online</a>
           <a class="nav-link mx-3" [routerLink]="['/main/mestres-da-linhagem']">Mestres</a>
-          <a class="nav-link mx-3" [routerLink]="['/main/codigo-de-etica']">Código de Ética</a>
+          <a class="nav-link mx-3" [routerLink]="['/main/terapias']">Terapias</a>
           <a class="nav-link mx-3" [routerLink]="['/main/planos-e-precos']">Planos e Preço</a>
         </div>
       </div>
@@ -32,6 +32,8 @@
     <p><a href="https://g.page/studiointegralsp?share" target="_blank"><i class='bx bxs-map-pin icon-footer'></i></a>Rua
       Basílio da
       Cunha, 16 – Aclimação – São Paulo – SP</p>
+    <p><a class="nav-link" [routerLink]="['/main/codigo-de-etica']">Clique aqui e leia nosso Código de Ética</a>
+    </p>
     <div class="col-12 d-flex justify-content-center align-items-center">
       <a href="https://www.youtube.com/c/WalNunes" target="_blank"><i class='bx bxl-youtube  icon-footer mx-4'></i></a>
       <a href="https://www.instagram.com/studiointegral_yoga/" target="_blank"><i
