Ajustes Finais e Pagina de Terapias

--- a/studio-integral/src/app/main/formacao/formacao.component.scss
+++ b/studio-integral/src/app/main/formacao/formacao.component.scss
@@ -7,6 +7,14 @@
   position: relative;
 }
 
+.img-certificado{
+  height: 150px;
+}
+
+.img-banner{
+  width: 100vw;
+}
+
 .carrosel-fotos{
  width: 80%;
 }
