--- a/studio-integral/src/app/main/meditacao-lua-cheia/meditacao-lua-cheia.component.html
+++ b/studio-integral/src/app/main/meditacao-lua-cheia/meditacao-lua-cheia.component.html
@@ -27,6 +27,9 @@
             <li>08/11 - Terça 20:00hrs</li>
             <li>07/12 - Quarta 20:35hrs</li>
           </ul>
+          <a class="btn btn-primary btn-cta my-3"
+            href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20da%20Medita%C3%A7%C3%A3o%20Lua%20Cheia"
+            target="_blank">Eu quero participar!</a>
         </div>
         <h3 class="my-5 text-center">Meditação Lua Cheia</h3>
         <div class="row d-flex justify-content-center">
@@ -54,7 +57,11 @@
           <div class="col-12 col-md-4">
             <img src="../assets/lua-cheia2.jpg" class="img" alt="">
           </div>
+          <a class="btn btn-primary btn-cta my-5"
+            href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20da%20Medita%C3%A7%C3%A3o%20Lua%20Cheia"
+            target="_blank">Eu quero participar!</a>
         </div>
+
       </div>
     </div>
   </div>
