--- a/studio-integral/src/app/main/meditacao-lua-cheia/meditacao-lua-cheia.component.scss
+++ b/studio-integral/src/app/main/meditacao-lua-cheia/meditacao-lua-cheia.component.scss
@@ -18,13 +18,10 @@
 
 }
 
-
 .btn-cta{
-  background-color: #01BD2A;
+  background-color: #5F2CA7;
   border-radius: 50px;
-  width: auto;
-  border: 2px solid #fff;
-  height: auto;
-  min-height: 45px;
-  min-width: 350px;
+  font-size: 1.5rem;
+  height: 55px;
+  width:300px;
 }
