--- a/studio-integral/src/app/main/terapias/terapias.component.html
+++ b/studio-integral/src/app/main/terapias/terapias.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 d-flex flex-column justify-content-center align-items-center mt-3">
       <h1>Terapias Studio Integral</h1>
       <div class="row d-flex justify-content-center 5">
-        <h4 class=" text-center mt-5 mb-3">Massagem Relaxante</h4>
+        <h4 class="text-center mt-5 mb-3">Massagem Relaxante</h4>
         <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
           <img src="../assets/massagem2.jpg" class="img-valores" alt="">
         </div>
@@ -16,41 +16,91 @@
           </p>
           <p>Duração: 50 minutos</p>
           <p>Valor: R$ 140,00</p>
-          <button class="btn-cta btn-primary mx-4"> Agendar Terapia <i class='bx bxl-whatsapp'
-              style="font-size: 18px;"></i></button>
+          <a class="btn-cta btn-primary mx-4"
+            href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20agendar%20a%20terapia%20Massagem%20Relaxante"
+            target="_blank"> Agendar Terapia <i class='bx bxl-whatsapp' style="font-size: 18px;"></i></a>
         </div>
       </div>
       <div class="row d-flex justify-content-center mt-5">
         <h4 class=" text-center mt-5 mb-3">Banho de Limpeza Energética</h4>
-        <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
-          <p class="text-center">Com uso de plantas específicas o banho de limpeza energética promove a cura através da
-            purificação dos
-            nossos campos sutis.
-            Alivia o estresse e tensões acumuladas no corpo, elimina a sensação de cansaço e promove a sensação de
-            leveza e bem-estar.
-          </p>
-          <p>Valor: R$ 140,00</p>
-          <button class="btn-cta btn-primary mx-4"> Agendar Terapia <i class='bx bxl-whatsapp'
-              style="font-size: 18px;"></i></button>
-        </div>
-        <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
-          <img src="../assets/banho.jpg" class="img-valores" alt="">
+        <div class="d-flex flex-column-reverse flex-md-row justify-content-center">
+          <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+            <p class="text-center">Com uso de plantas específicas o banho de limpeza energética promove a cura através
+              da
+              purificação dos
+              nossos campos sutis.
+              Alivia o estresse e tensões acumuladas no corpo, elimina a sensação de cansaço e promove a sensação de
+              leveza e bem-estar.
+            </p>
+            <p>Valor: R$ 140,00</p>
+            <a class="btn-cta btn-primary mx-4" target="_blank"
+              href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20agendar%20a%20terapia%20Banho%20de%20Limpeza%20Energ%C3%A9tica">
+              Agendar Terapia <i class='bx bxl-whatsapp' style="font-size: 18px;"></i></a>
+          </div>
+          <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+            <img src="../assets/banho.jpg" class="img-valores" alt="">
+          </div>
         </div>
       </div>
       <div class="row d-flex justify-content-center mt-5">
         <h4 class=" text-center mt-5 mb-3">Massagem Relaxante + Banho Harmonização</h4>
         <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
-          <img src="../assets/banho.jpg" class="img-valores" alt="">
+          <img src="../assets/banhomassagem.jpg" class="img-valores" alt="">
         </div>
         <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
-          <p class="text-center">Este pacote é para quem busca auto cuidado com amor e leveza.
+          <p class="text-center">Este pacote é para quem busca auto cuidado com amor e leveza com todos os beneficios da
+            massagem relaxante e do banho de harmonização.
           </p>
           <p>Duração: 1 hora</p>
           <p>Valor: R$ 140,00</p>
-          <button class="btn-cta btn-primary mx-4"> Agendar Terapia <i class='bx bxl-whatsapp'
-              style="font-size: 18px;"></i></button>
+          <a class="btn-cta btn-primary mx-4" target="_blank"
+            href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20agendar%20a%20terapia%20Massagem%20Relaxante%20%2B%20Banho%20Harmoniza%C3%A7%C3%A3o">
+            Agendar Terapia <i class='bx bxl-whatsapp' style="font-size: 18px;"></i></a>
         </div>
-
+      </div>
+      <div class="row d-flex justify-content-center  mt-5">
+        <h4 class=" text-center mt-5 mb-3">Leitura de Tarot</h4>
+        <div class="d-flex flex-column-reverse flex-md-row justify-content-center">
+          <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+            <p class="text-center">O tarot é um oráculo que pode auxiliar o consulente (pessoa que se beneficia da
+              leitura) em sua jornada de autoconhecimento. Existem dois tipos de prática no tarot: a divinatória, que
+              consiste em previsões do futuro e a terapêutica, que proporciona uma análise mais a fundo de situações,
+              sem
+              prever o que vai acontecer.
+              O tarot considera sempre que as ações moldam o destino, portanto, o livre arbítrio do consulente sempre é
+              levado em conta. Mesmo na modalidade divinatória, a previsão não se trata de uma sentença. Já na
+              modalidade
+              terapêutica, o tarot auxilia na autocompreensão, no autocuidado e na autorreflexão de aspectos da vida.”
+            </p>
+            <p>Valor: R$ 280,00</p>
+            <a class="btn-cta btn-primary mx-4" target="_blank"
+              href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20agendar%20a%20terapia%20Leitura%20de%20Tarot">
+              Agendar Terapia <i class='bx bxl-whatsapp' style="font-size: 18px;"></i></a>
+          </div>
+          <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+            <img src="../assets/tarot.jpg" class="img-valores" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="row d-flex justify-content-center mt-5">
+        <h4 class=" text-center mt-5 mb-3">Thai Massagem</h4>
+        <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+          <img src="../assets/thaimassage.jpg" class="img-valores" alt="">
+        </div>
+        <div class="col-12 col-md-5 d-flex flex-column justify-content-center align-items-center">
+          <p class="text-center">A massagem tailandesa é tida como um método de cura para o corpo e há muito tempo vem
+            sendo utilizada para prevenir e tratar diversos tipos de doenças. Na massagem tailandesa o(a) terapeuta usa
+            seus pés, joelhos, polegares, palmas e cotovelos, além de pressão, compressão e alongamento no corpo do
+            paciente para desbloquear os nós energéticos – considerados a principal causa de doenças adquiridas pelo
+            corpo e alma, pois impedem a fluidez da energia vital. Quando os nós são desfeitos, o corpo e a mente se
+            libertam e podem experimentar imediata sensação de relaxamento e bem-estar.
+          </p>
+          <p>Duração: 1 hora e 30 minutos</p>
+          <p>Valor: R$ 350,00</p>
+          <a class="btn-cta btn-primary mx-4" target="_blank"
+            href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20agendar%20a%20terapia%20Thai%20Massagem">
+            Agendar Terapia <i class='bx bxl-whatsapp' style="font-size: 18px;"></i></a>
+        </div>
       </div>
     </div>
   </div>
