--- a/studio-integral/src/app/main/formacao/formacao.component.html
+++ b/studio-integral/src/app/main/formacao/formacao.component.html
@@ -1,5 +1,5 @@
 <main>
-  <div id="carouselExampleIndicatorsBanner" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
+  <!-- <div id="carouselExampleIndicatorsBanner" class="carousel slide carrosel-destaque" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../assets/SlideRetiro1.jpg" class="d-block w-100 imagem-carrosel-banner" alt="...">
@@ -16,7 +16,9 @@
       <p class="texto-destaque-banner text-center">Treinamento profissional e Formação Internacional em Yoga, Meditação
         e Autoconhecimento</p>
     </div>
-  </div>
+  </div> -->
+  <div class="d-none d-sm-block"><img src="../assets/formacaoDesk.png" alt="" class="img-banner"></div>
+  <div class="d-block d-sm-none"><img src="../assets/formacaoMobile.png" alt="" class="img-banner"></div>
   <div class="container-fluid">
     <div class="row px-2">
       <div class="col-12">
@@ -50,9 +52,23 @@
               atuação como professor.
               <br>
               O Curso foi pensado para quem deseja vivenciar esse estilo de vida, quem deseja se profissionalizar ou se
-              especializar nessa área. Nossa formação oferece o certificado internacional do Yoga Alliance, certificado
-              que autoriza o exercício profissional em todo o mundo.
+              especializar nessa área.
             </p>
+          </div>
+          <div class="col-12 d-flex flex-column align-items-center justify-content-center mb-5">
+            <h3 class=" title-bonus text-center ">Certificação Internacional RYT 200H</h3>
+            <div class="row d-flex justify-content-center">
+              <div class="col-12 col-lg-4 d-flex justify-content-center">
+                <img src="../assets/certificado.jpg" alt="" class="img-certificado" loading="lazy">
+              </div>
+              <div class="col-12 col-lg-4 d-flex justify-content-center align-items-center text-center p-2">
+                <p>
+                  Nossa formação oferece o certificado Registred Yoga Teacher (RYT) de 200h do Yoga Alliance,
+                  certificado
+                  que autoriza o exercício profissional em todo o mundo.
+                </p>
+              </div>
+            </div>
           </div>
           <div class="col-12 d-flex justify-content-center mb-5">
             <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
@@ -61,7 +77,7 @@
       </div>
     </div>
   </div>
-  <div class="grade">
+  <div class=" grade">
     <div class="row d-flex justify-content-center">
       <h1 class=" title-bonus text-center my-3 pb-5">O que você vai aprender na Formação:</h1>
       <div class="row d-flex justify-content-center mb-4">
@@ -116,9 +132,11 @@
         </div>
       </div>
       <div class="col-12 d-flex flex-column justify-content-center align-items-center my-3">
-        <h5 class="subtitle-grade text-center">Material didático e certificação internacional pela Yoga Alliance USA
+        <h5 class="subtitle-grade text-center">Material didático e certificação internacional pela Yoga
+          Alliance USA
         </h5>
-        <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
+        <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da
+          formação!</a>
       </div>
     </div>
   </div>
@@ -156,7 +174,8 @@
                 <div class="card d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/prof1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Fabi Paz - Professora de Anatomia do Yoga. Instrutora de Yoga.
+                    <p class="card-text text-center">Fabi Paz - Professora de Anatomia do Yoga. Instrutora
+                      de Yoga.
                       Especialista em
                       terapias integrativas e Yoga para gestantes. Certificada pelo Yoga Alliance - EUA</p>
                   </div>
@@ -166,7 +185,8 @@
                 <div class="card  d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/prof2.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Igor Roda de Mantras - Instrutor de Yoga. Especialista em Filosofia
+                    <p class="card-text text-center">Igor Roda de Mantras - Instrutor de Yoga. Especialista
+                      em Filosofia
                       do Yoga e
                       Mantras</p>
                   </div>
@@ -176,7 +196,8 @@
                 <div class="card  d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/prof3.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Mateus Pigari - Instrutor de Yoga formado pelo Studio Integral e
+                    <p class="card-text text-center">Mateus Pigari - Instrutor de Yoga formado pelo Studio
+                      Integral e
                       certificado
                       pelo Yoga Alliance - EUA</p>
                   </div>
@@ -189,7 +210,8 @@
                     <p class="card-text text-center">Dayanne da Silva Srvero - Formada em Educação Física
                       Pós graduada em Esportes e Atividade de Aventura.
                       Instrutora de pilates
-                      Instrutora de yoga formada pelo Studio Integral e certificada pelo Yoga Alliance - EUA</p>
+                      Instrutora de yoga formada pelo Studio Integral e certificada pelo Yoga Alliance - EUA
+                    </p>
                   </div>
                 </div>
               </div>
@@ -197,7 +219,8 @@
                 <div class="card  d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/profwal.png" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. E
+                    <p class="card-text text-center">Wal Nunes - Mestre em Yoga e Meditação há mais de 10
+                      anos. E
                       fundadora do Studio Integral.</p>
                   </div>
                 </div>
@@ -206,7 +229,8 @@
                 <div class="card  d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/prof5.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Mestre Lakshman Gurukkal - Mestre da casa, ancora a energia do
+                    <p class="card-text text-center">Mestre Lakshman Gurukkal - Mestre da casa, ancora a
+                      energia do
                       Tantra</p>
                   </div>
                 </div>
@@ -215,7 +239,8 @@
                 <div class="card  d-flex flex-column align-items-center" style="width: 18rem;">
                   <img src="../assets/prof6.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <p class="card-text text-center">Vanessa - Coordenadora e Instrutora de Yoga. Especialista em
+                    <p class="card-text text-center">Vanessa - Coordenadora e Instrutora de Yoga.
+                      Especialista em
                       Filosofia do Yoga. Certificada pelo Yoga Alliance - EUA</p>
                   </div>
                 </div>
@@ -256,14 +281,16 @@
         </div>
         <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center text-programacao">
           <br>
-          <p class="text-center">Sábados e domingos, das 09h às 18h, com uma hora de intervalo para o almoço</p>
+          <p class="text-center">Sábados e domingos, das 09h às 18h, com uma hora de intervalo para o almoço
+          </p>
           <p><strong>Local:</strong></p>
           <p>Sede do Studio Integral</p>
           <p>Rua Basílio da Cunha, 16 – Aclimação – SP</p>
         </div>
       </div>
       <div class="col-12 d-flex justify-content-center">
-        <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
+        <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da
+          formação!</a>
       </div>
     </div>
     <div class="d-flex flex-column align-items-center">
@@ -360,8 +387,9 @@
           <i class="bx bxs-gift"></i> Orientação de como desenvolver Sadhana pessoal.
         </li>
       </ul>
-      <p class="text-center my-4" style="font-size: 1.3rem;">Mais de <strong>R$ 8.000</strong> somente em bônus!</p>
-      <a class="btn btn-primary btn-card my-3" href="/main/formacao#compra">Quero participar da formação!</a>
+      <!-- <p class="text-center my-4" style="font-size: 1.3rem;">Mais de <strong>R$ 8.000</strong> somente em bônus!</p> -->
+      <a class="btn btn-primary btn-card my-3" href="/main/formacao#compra">Quero participar da
+        formação!</a>
     </div>
   </div>
   <div class="walnunes">
@@ -369,14 +397,17 @@
       <div class="row d-flex justify-content-center">
         <div class="col-12 d-flex flex-column justify-content-center align-items-center">
           <h1 class="text-center text-lg-start">Quem é Wal nunes?</h1>
-          <p class="text-center text-limit">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos. Praticante há
+          <p class="text-center text-limit">Wal Nunes - Mestre em Yoga e Meditação há mais de 10 anos.
+            Praticante há
             mais de 20
-            anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da Metodologia de
+            anos, fundou o Studio Integral, escola certificada pelo Yoga Alliance EUA. Criadora da
+            Metodologia de
             treino
-            iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da Índia
+            iTantra que mistura Yoga, Meditação e Kalari. Ensinamentos das escolas tradicionais do sul da
+            Índia
           </p>
         </div>
-        <div class="col-12 mb-5 d-flex justify-content-center">
+        <div class="col-12 mb-4 d-flex justify-content-center">
           <iframe width="700" height="331" src="https://www.youtube.com/embed/_O-jph6Re1s"
             title="Depoimento Cura e Chakras" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -385,13 +416,14 @@
       </div>
       <div class="row">
         <div class="col-12 d-flex justify-content-center">
-          <a class="btn btn-primary btn-card my-3" href="/main/formacao#compra">Quero participar da formação!</a>
+          <a class="btn btn-primary btn-card mt-3" href="/main/formacao#compra">Quero participar da
+            formação!</a>
         </div>
       </div>
     </div>
   </div>
   <div class="container-fluid">
-    <div class="depoimentos my-5">
+    <div class="depoimentos my-4">
       <div class="row d-flex justify-content-around align-items-center">
         <h1 class="title-fotos text-center mt-4">Depoimento dos Alunos</h1>
         <div class="col-12 col-lg-3 d-flex justify-content-center my-2"><iframe width="380" height="300"
@@ -415,29 +447,35 @@
         <div class="col-10 p-0 d-flex flex-column align-items-center text-limit">
           <p class="text-center">
             O Retiro Cura e Chakras faz parte do cronograma de nossa formação, é uma experiência intensa de
-            autoconhecimento em meio a natureza, que tem como base a prática dos ensinamentos do Kalaripayattu
+            autoconhecimento em meio a natureza, que tem como base a prática dos ensinamentos do
+            Kalaripayattu
             (conhecida
             como o Yoga dos guerreiros do sul da Índia) e as meditações do Sri Vidya Tantra.
           </p>
 
           <p class="text-center">
-            É também a oportunidade de quebrar padrões negativos, libertar-se de amarras do passado e enxergar nosso
+            É também a oportunidade de quebrar padrões negativos, libertar-se de amarras do passado e
+            enxergar nosso
             verdadeiro ser, através da leitura dos Chakras.
           </p>
 
           <p class="text-center">
-            Nesta imersão são utilizadas técnicas que revelam e tratam emoções estagnadas, libertam do passado e
+            Nesta imersão são utilizadas técnicas que revelam e tratam emoções estagnadas, libertam do
+            passado e
             permitem viver o poder do agora, o nosso poder de cura e restauração interior.
           </p>
 
           <p class="text-center">
-            O Retiro nasceu em 2015, enquanto morava com meu mestre em Auroville na Índia, tive a oportunidade de
-            apresentar as técnicas na minha escola da Índia e aprimorar o conhecimento com meus alunos de São Paulo, que
+            O Retiro nasceu em 2015, enquanto morava com meu mestre em Auroville na Índia, tive a
+            oportunidade de
+            apresentar as técnicas na minha escola da Índia e aprimorar o conhecimento com meus alunos de
+            São Paulo, que
             desde 2016 participam da imersão, proporcionando impactantes mudanças aos participantes.
           </p>
         </div>
         <div class="col-12 d-flex justify-content-center">
-          <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da formação!</a>
+          <a class="btn btn-primary btn-card my-5" href="/main/formacao#compra">Quero participar da
+            formação!</a>
         </div>
       </div>
     </div>
@@ -447,7 +485,8 @@
       <div class="col-12 d-flex flex-column align-items-center justify-content-center p-3 mx-0 my-2">
         <h1 class="title-compra text-center">Valor da Capacitação + Retiro Cura e Chakras</h1>
         <h1 class="valor-compra">12x de R$ 918,00</h1>
-        <a class="btn btn-primary btn-cta-compra my-4" href="https://api.whatsapp.com/send?phone=5511982791420"
+        <a class="btn btn-primary btn-cta-compra my-4"
+          href="https://api.whatsapp.com/send?phone=5511982791420&text=Ol%C3%A1!%20Quero%20participar%20da%20Forma%C3%A7%C3%A3o%20de%20Yoga!"
           target="_blank">Reservar minha vaga!</a>
         <h5 class="valor-compra text-center">Entre em contato e veja opções de parcelamento</h5>
       </div>
