--- a/studio-integral/src/app/main/home/home.component.html
+++ b/studio-integral/src/app/main/home/home.component.html
@@ -8,7 +8,7 @@
           <img src="../assets/banner1mobile.png" class="d-block d-sm-none w-100 banner" alt="...">
           <div class="carousel-caption d-block h-75">
             <h1> <span class="titulo-destaque-main display-5">Studio Integral</span> </h1>
-            <p> <span class="texto-destaque-main ">O melhor de você está aqui</span> </p>
+            <p> <span class="texto-destaque-main" href="/main/formacao">O melhor de você está aqui</span> </p>
           </div>
         </div>
         <div class="carousel-item">
@@ -16,7 +16,7 @@
           <div class="carousel-caption d-block h-75">
             <h1 class="fonte-destaque display-5">Formação Yoga</h1>
             <p class="texto-destaque">Treinamento profissional em Yoga, Meditação e Autoconhecimento.</p>
-            <button class="btn btn-primary btn-carrosel">Saiba Mais</button>
+            <button class="btn btn-primary btn-carrosel" href="/main/formacao">Saiba Mais</button>
           </div>
         </div>
         <div class="carousel-item">
@@ -25,7 +25,7 @@
             <h1 class="fonte-destaque display-4">Retiro Cura e Chakras</h1>
             <p class="texto-destaque">Uma experiência única em meio a natureza, para recarregar e harmonizar as
               energias.</p>
-            <button class="btn btn-primary btn-carrosel">Saiba Mais</button>
+            <button class="btn btn-primary btn-carrosel" href="/main/retiro">Saiba Mais</button>
           </div>
         </div>
       </div>
@@ -69,6 +69,17 @@
             <a class="btn btn-primary btn-card ms-4" href="/main/meditacao-lua-cheia">Saiba Mais</a>
           </div>
         </div>
+        <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
+          <img src="../assets/massagem.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
+          <div class="card-body d-flex flex-column justify-content-center align-items-center">
+            <h3 class="card-title text-center">Terapias</h3>
+            <p class="card-text text-center my-3">Conheça nosso setor de terapias do studio, com diversas tecnicas de
+              massagem, banhos energéticos e leitura de Tarot. Todas com intuito de trazer cura, relaxamento e
+              direcionamentos aos participantes.
+            </p>
+            <a class="btn btn-primary btn-card ms-4" href="/main/terapias">Saiba Mais</a>
+          </div>
+        </div>
 
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
           <img src="../assets/card1.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
@@ -90,7 +101,7 @@
             <a class="btn btn-primary btn-card ms-4" href="/main/aulas-online">Saiba Mais</a>
           </div>
         </div>
-
+        <!--
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
           <img src="../assets/card-3.jpg" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
@@ -102,7 +113,7 @@
             <a class="btn btn-primary btn-card ms-4">Saiba Mais</a>
           </div>
         </div>
-
+ -->
         <div class="card card-largura col-12 col-md-6 col-lg-6 m-5 p-0">
           <img src="../assets/banner2.png" loading="lazy" class="card-img-top card-posicao-imagem" alt="...">
           <div class="card-body d-flex flex-column justify-content-center align-items-center">
