--- a/studio-integral/src/app/main/retiro/retiro.component.html
+++ b/studio-integral/src/app/main/retiro/retiro.component.html
@@ -36,8 +36,8 @@
               permitem viver o poder do agora, o nosso poder de cura e restauração interior.
             </p>
           </div>
-          <div class="col-12 mb-5">
-            <iframe width="100%" height="331" src="https://www.youtube.com/embed/o328iszgByw"
+          <div class="col-12 mb-5 d-flex justify-content-center">
+            <iframe width="600" height="331" src="https://www.youtube.com/embed/o328iszgByw"
               title="Depoimento Cura e Chakras" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
