--- a/studio-integral/src/app/main/terapias/terapias.component.scss
+++ b/studio-integral/src/app/main/terapias/terapias.component.scss
@@ -11,7 +11,17 @@
   width: auto;
   border: 2px solid #fff;
   height: auto;
-
+  text-decoration: none;
+  text-align: center;
+  padding-top: 7px;
   min-height: 45px;
   min-width: 350px;
+}
+
+@media (max-width: 576px) {
+  .img-valores{
+    width: 90%;
+    object-fit: cover;
+    border-radius: 25px;
+  }
 }
