--- a/studio-integral/src/app/main/formacao/formacao.component.html
+++ b/studio-integral/src/app/main/formacao/formacao.component.html
@@ -269,8 +269,8 @@
         <div class="col-12 col-lg-5 p-0 d-flex flex-column align-items-center">
           <ul class="lista-programacao">
             <li>24 e 25 - Setembro</li>
-            <li>12 e 15 - Outubro - Retiro Cura e Chakras</li>
-            <li>19 e 20 - Novembro</li>
+            <li>22 e 23 - Outubro</li>
+            <li>11 e 15 - Novembro - Retiro Cura e Chakras</li>
             <li>17 e 18 - Dezembro</li>
             <li>21 e 22 - Janeiro</li>
             <li>25 e 26 - Fevereiro</li>
